--- a/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
+++ b/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
@@ -5,13 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Splash View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="LoodosMovieChallange" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SplashViewController" customModule="LoodosMovieChallange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -34,33 +35,105 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parameters from Remote Config: " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PzI-gc-0Vq">
+                                <rect key="frame" x="65" y="417" width="284" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="284" id="3Je-fO-A51"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="Ultraviolet"/>
                         <constraints>
                             <constraint firstItem="eHT-B6-LVM" firstAttribute="trailing" secondItem="MiQ-6L-VMW" secondAttribute="trailing" id="9ro-S1-uGS"/>
                             <constraint firstItem="eHT-B6-LVM" firstAttribute="top" secondItem="MiQ-6L-VMW" secondAttribute="bottom" constant="20" id="DCY-rU-l4s"/>
+                            <constraint firstItem="PzI-gc-0Vq" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FAt-2F-BbW"/>
                             <constraint firstItem="eHT-B6-LVM" firstAttribute="leading" secondItem="MiQ-6L-VMW" secondAttribute="leading" id="OEl-dw-IcM"/>
                             <constraint firstItem="MiQ-6L-VMW" firstAttribute="trailing" secondItem="avf-LQ-chp" secondAttribute="trailing" id="QBd-nt-KNE"/>
                             <constraint firstItem="MiQ-6L-VMW" firstAttribute="top" secondItem="avf-LQ-chp" secondAttribute="bottom" constant="8" id="Qc8-9G-1Mc"/>
                             <constraint firstItem="avf-LQ-chp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="U2Y-EQ-g3u"/>
                             <constraint firstItem="avf-LQ-chp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="dqH-XW-puG"/>
+                            <constraint firstItem="PzI-gc-0Vq" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="rg8-Mt-Jb3"/>
                             <constraint firstItem="MiQ-6L-VMW" firstAttribute="leading" secondItem="avf-LQ-chp" secondAttribute="leading" id="v2j-Ob-28t"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="avf-LQ-chp" secondAttribute="trailing" constant="65" id="xRJ-NM-Ar4"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="tR0-r4-xbJ"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="internetConnectionControlLabel" destination="eHT-B6-LVM" id="17b-XG-9Zn"/>
+                        <outlet property="remoteConfigResponseLabel" destination="PzI-gc-0Vq" id="pfD-RH-Lb8"/>
+                        <segue destination="Od8-MA-uSn" kind="presentation" identifier="goToMainSegue" modalPresentationStyle="fullScreen" id="fC5-9Q-rXB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Movies-->
+        <scene sceneID="znA-T6-99s">
+            <objects>
+                <viewController id="ztA-vT-plL" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VmG-KQ-e4p">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="v4M-zM-K5z">
+                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-A2-tZs">
+                                <rect key="frame" x="0.0" y="144" width="414" height="752"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="HQG-H3-28Q"/>
+                        <color key="backgroundColor" name="Ultraviolet"/>
+                        <constraints>
+                            <constraint firstItem="fFh-A2-tZs" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" id="FIK-MR-TsV"/>
+                            <constraint firstAttribute="bottom" secondItem="fFh-A2-tZs" secondAttribute="bottom" id="MlQ-5B-QP5"/>
+                            <constraint firstItem="v4M-zM-K5z" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" id="NLk-H5-Lc0"/>
+                            <constraint firstItem="v4M-zM-K5z" firstAttribute="trailing" secondItem="HQG-H3-28Q" secondAttribute="trailing" id="Qz9-N4-vNN"/>
+                            <constraint firstItem="fFh-A2-tZs" firstAttribute="trailing" secondItem="HQG-H3-28Q" secondAttribute="trailing" id="Su8-gm-Ev4"/>
+                            <constraint firstItem="v4M-zM-K5z" firstAttribute="top" secondItem="HQG-H3-28Q" secondAttribute="top" id="h6d-Vr-WuW"/>
+                            <constraint firstItem="fFh-A2-tZs" firstAttribute="top" secondItem="v4M-zM-K5z" secondAttribute="bottom" id="rC0-hg-VTC"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Movies" id="h8m-VY-4aj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tOf-Xz-fkc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2482.608695652174" y="137.94642857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TxU-fq-894">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Od8-MA-uSn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="8cU-mW-5uy"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="e8c-Je-UgV">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ztA-vT-plL" kind="relationship" relationship="rootViewController" id="aVl-0o-rmc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HCR-7K-X2N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1766.6666666666667" y="137.94642857142856"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="Ultraviolet">
             <color red="0.37299999594688416" green="0.29399999976158142" blue="0.54500001668930054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
