--- a/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
+++ b/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,19 +19,18 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loodos Challange" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avf-LQ-chp">
                                 <rect key="frame" x="65" y="104" width="284" height="41"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The easiest way to explore new movies from all kinds." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MiQ-6L-VMW">
                                 <rect key="frame" x="65" y="153" width="284" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Establishing your connnection…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHT-B6-LVM">
                                 <rect key="frame" x="65" y="214" width="284" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parameters from Remote Config: " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PzI-gc-0Vq">
@@ -41,12 +39,11 @@
                                     <constraint firstAttribute="width" constant="284" id="3Je-fO-A51"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="Ultraviolet"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="eHT-B6-LVM" firstAttribute="trailing" secondItem="MiQ-6L-VMW" secondAttribute="trailing" id="9ro-S1-uGS"/>
                             <constraint firstItem="eHT-B6-LVM" firstAttribute="top" secondItem="MiQ-6L-VMW" secondAttribute="bottom" constant="20" id="DCY-rU-l4s"/>
@@ -76,33 +73,36 @@
         <!--Movies-->
         <scene sceneID="znA-T6-99s">
             <objects>
-                <viewController id="ztA-vT-plL" sceneMemberID="viewController">
+                <viewController id="ztA-vT-plL" customClass="MainViewController" customModule="LoodosMovieChallange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="VmG-KQ-e4p">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="v4M-zM-K5z">
-                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-A2-tZs">
-                                <rect key="frame" x="0.0" y="144" width="414" height="752"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search a movie by it's title to start." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QcB-sQ-GA5">
+                                <rect key="frame" x="40" y="445" width="334" height="60"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="I6O-wB-KNy">
+                                <rect key="frame" x="40" y="378" width="334" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="HQG-H3-28Q"/>
-                        <color key="backgroundColor" name="Ultraviolet"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="fFh-A2-tZs" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" id="FIK-MR-TsV"/>
-                            <constraint firstAttribute="bottom" secondItem="fFh-A2-tZs" secondAttribute="bottom" id="MlQ-5B-QP5"/>
-                            <constraint firstItem="v4M-zM-K5z" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" id="NLk-H5-Lc0"/>
-                            <constraint firstItem="v4M-zM-K5z" firstAttribute="trailing" secondItem="HQG-H3-28Q" secondAttribute="trailing" id="Qz9-N4-vNN"/>
-                            <constraint firstItem="fFh-A2-tZs" firstAttribute="trailing" secondItem="HQG-H3-28Q" secondAttribute="trailing" id="Su8-gm-Ev4"/>
-                            <constraint firstItem="v4M-zM-K5z" firstAttribute="top" secondItem="HQG-H3-28Q" secondAttribute="top" id="h6d-Vr-WuW"/>
-                            <constraint firstItem="fFh-A2-tZs" firstAttribute="top" secondItem="v4M-zM-K5z" secondAttribute="bottom" id="rC0-hg-VTC"/>
+                            <constraint firstItem="I6O-wB-KNy" firstAttribute="leading" secondItem="QcB-sQ-GA5" secondAttribute="leading" id="3t7-6c-gwM"/>
+                            <constraint firstItem="HQG-H3-28Q" firstAttribute="trailing" secondItem="QcB-sQ-GA5" secondAttribute="trailing" constant="40" id="H5M-dG-y7a"/>
+                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="top" secondItem="I6O-wB-KNy" secondAttribute="bottom" constant="30" id="L3v-Nd-daW"/>
+                            <constraint firstItem="I6O-wB-KNy" firstAttribute="trailing" secondItem="QcB-sQ-GA5" secondAttribute="trailing" id="P6G-IE-oxH"/>
+                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" constant="40" id="hvh-wX-fh0"/>
+                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="centerY" secondItem="HQG-H3-28Q" secondAttribute="centerY" id="x0i-DK-gwB"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Movies" id="h8m-VY-4aj"/>
+                    <navigationItem key="navigationItem" title="Movies" id="dB2-cJ-Ccg"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="I6O-wB-KNy" id="jq1-vX-KD8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tOf-Xz-fkc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -129,9 +129,9 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="Ultraviolet">
-            <color red="0.37299999594688416" green="0.29399999976158142" blue="0.54500001668930054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
