--- a/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
+++ b/LoodosMovieChallange/Storyboards/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Parameters from Remote Config: " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PzI-gc-0Vq">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remote Config Response Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PzI-gc-0Vq">
                                 <rect key="frame" x="65" y="417" width="284" height="72"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="284" id="3Je-fO-A51"/>
@@ -78,30 +78,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search a movie by it's title to start." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QcB-sQ-GA5">
-                                <rect key="frame" x="40" y="445" width="334" height="60"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="25"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search a movie to start." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21j-ZI-7Vh">
+                                <rect key="frame" x="40" y="461.5" width="334" height="27"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="I6O-wB-KNy">
-                                <rect key="frame" x="40" y="378" width="334" height="37"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3bC-qK-KTc">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="93" id="WL9-td-By3" customClass="MovieTableViewCell" customModule="LoodosMovieChallange" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="93"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WL9-td-By3" id="dMZ-n1-eAl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="93"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BpC-pP-HZU">
+                                                    <rect key="frame" x="32" y="19" width="382" height="24"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IMBD Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Sz-gA-dp8">
+                                                    <rect key="frame" x="32" y="51" width="382" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="1Sz-gA-dp8" firstAttribute="leading" secondItem="BpC-pP-HZU" secondAttribute="leading" id="D2r-6x-rls"/>
+                                                <constraint firstItem="1Sz-gA-dp8" firstAttribute="top" secondItem="BpC-pP-HZU" secondAttribute="bottom" constant="8" id="FFa-3v-BgH"/>
+                                                <constraint firstItem="1Sz-gA-dp8" firstAttribute="trailing" secondItem="BpC-pP-HZU" secondAttribute="trailing" id="ezW-FU-vUF"/>
+                                                <constraint firstItem="BpC-pP-HZU" firstAttribute="leading" secondItem="dMZ-n1-eAl" secondAttribute="leadingMargin" constant="12" id="hKx-P4-74g"/>
+                                                <constraint firstItem="BpC-pP-HZU" firstAttribute="top" secondItem="dMZ-n1-eAl" secondAttribute="topMargin" constant="8" id="rHU-3A-En1"/>
+                                                <constraint firstItem="BpC-pP-HZU" firstAttribute="trailing" secondItem="dMZ-n1-eAl" secondAttribute="trailingMargin" constant="20" id="vlt-CZ-e8p"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imdbRateLabel" destination="1Sz-gA-dp8" id="mjz-My-Aft"/>
+                                            <outlet property="titleLabel" destination="BpC-pP-HZU" id="IgP-eX-1n5"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="ztA-vT-plL" id="we0-EW-CyG"/>
+                                    <outlet property="delegate" destination="ztA-vT-plL" id="SYg-bl-nJB"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="I6O-wB-KNy">
+                                <rect key="frame" x="40" y="389.5" width="334" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="WyZ-h1-TdX"/>
+                                </constraints>
                             </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="HQG-H3-28Q"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="I6O-wB-KNy" firstAttribute="leading" secondItem="QcB-sQ-GA5" secondAttribute="leading" id="3t7-6c-gwM"/>
-                            <constraint firstItem="HQG-H3-28Q" firstAttribute="trailing" secondItem="QcB-sQ-GA5" secondAttribute="trailing" constant="40" id="H5M-dG-y7a"/>
-                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="top" secondItem="I6O-wB-KNy" secondAttribute="bottom" constant="30" id="L3v-Nd-daW"/>
-                            <constraint firstItem="I6O-wB-KNy" firstAttribute="trailing" secondItem="QcB-sQ-GA5" secondAttribute="trailing" id="P6G-IE-oxH"/>
-                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" constant="40" id="hvh-wX-fh0"/>
-                            <constraint firstItem="QcB-sQ-GA5" firstAttribute="centerY" secondItem="HQG-H3-28Q" secondAttribute="centerY" id="x0i-DK-gwB"/>
+                            <constraint firstItem="3bC-qK-KTc" firstAttribute="top" secondItem="HQG-H3-28Q" secondAttribute="top" id="01M-ZK-fyV"/>
+                            <constraint firstItem="21j-ZI-7Vh" firstAttribute="trailing" secondItem="I6O-wB-KNy" secondAttribute="trailing" id="1G9-Cw-zKz"/>
+                            <constraint firstItem="I6O-wB-KNy" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" constant="40" id="6OT-xn-sgn"/>
+                            <constraint firstItem="21j-ZI-7Vh" firstAttribute="leading" secondItem="I6O-wB-KNy" secondAttribute="leading" id="AO2-TF-NWA"/>
+                            <constraint firstItem="21j-ZI-7Vh" firstAttribute="top" secondItem="I6O-wB-KNy" secondAttribute="bottom" constant="12" id="OTn-Zb-YbG"/>
+                            <constraint firstItem="HQG-H3-28Q" firstAttribute="trailing" secondItem="I6O-wB-KNy" secondAttribute="trailing" constant="40" id="ZfZ-z0-ugG"/>
+                            <constraint firstItem="3bC-qK-KTc" firstAttribute="trailing" secondItem="HQG-H3-28Q" secondAttribute="trailing" id="cY7-Qv-OEA"/>
+                            <constraint firstItem="3bC-qK-KTc" firstAttribute="leading" secondItem="HQG-H3-28Q" secondAttribute="leading" id="gba-C2-P6c"/>
+                            <constraint firstAttribute="bottom" secondItem="3bC-qK-KTc" secondAttribute="bottom" id="goE-aV-w7S"/>
+                            <constraint firstItem="21j-ZI-7Vh" firstAttribute="centerY" secondItem="HQG-H3-28Q" secondAttribute="centerY" id="sXx-Kl-if3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="dB2-cJ-Ccg"/>
                     <connections>
                         <outlet property="activityIndicator" destination="I6O-wB-KNy" id="jq1-vX-KD8"/>
+                        <outlet property="tableView" destination="3bC-qK-KTc" id="QRp-1g-rDj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tOf-Xz-fkc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
